src/01_enformer/00_clusterCRG/work/d8/3302aed1ddc2d3ae6ee333c6c03e92/.command.err
  File "02_pred_eval.py", line 72
    if(eval == "eval"){
                      ^
SyntaxError: invalid syntax
